# ndd-wordcount

.github/workflows/: build.yml
ndd-plugin/: CMakeLists.txt  build.sh
ndd-plugin/src/include/: nddplugin.h
ndd-plugin/src/wordcount/: CMakeLists.txt  plugin.json  wordcount.cpp  wordcount.h
